[tool.poetry]
name = "gsprayer"
version = "0.1.1"
description = "User enumeration and password spraying aimed at G-Suite"
authors = ["Mayk <7395296+yok4i@users.noreply.github.com>"]
license = "MIT"
include = [
    { path = "*.py", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.9"
webdriver-manager = "^4.0.1"
selenium = "4.10.0"
requests = "^2.27.1"
undetected-chromedriver = "^3.5.5"
selenium-wire = "5.1.0"
setuptools = "^75.8.0"
async-generator = "^1.10"
attrs = "^24.3.0"
blinker = "1.7.0"
brotli = "^1.1.0"
certifi = "^2024.12.14"
cffi = "^1.17.1"
charset-normalizer = "^3.4.1"
colorama = "^0.4.6"
configparser = "^7.1.0"
crayons = "^0.4.0"
h11 = "^0.14.0"
h2 = "^4.1.0"
hpack = "^4.0.0"
hyperframe = "^6.0.1"
idna = "^3.10"
kaitaistruct = "^0.10"
outcome = "^1.3.0.post0"
pyasn1 = "^0.6.1"
pycparser = "^2.22"
pydivert = "^2.1.0"
pyopenssl = "23.2.0"
pyparsing = "^3.2.1"
pysocks = "^1.7.1"
sniffio = "^1.3.1"
sortedcontainers = "^2.4.0"
trio-websocket = "^0.11.1"
trio = "^0.28.0"
urllib3 = "^2.3.0"
wsproto = "^1.2.0"
zstandard = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gsprayer = "gsprayer:run"